tests/jastadd/negative/name_errors/L3/10_ProcCall.ob
MODULE TestModule;
	PROCEDURE g1;
		PROCEDURE g2;
			PROCEDURE g3;
			END g3;
		END g2;
	BEGIN
		g1;      (* OK *)
		g2;      (* OK *)
		g3       (* NOT OK *)
	END g1;
END TestModule.
